<resources>
    <string name="app_name">DiceRoller</string>
    <string name="roll_label">Roll</string>
    <string name="count_label">Count Up</string>
    <string name="Dice1">Count up for Dice 1</string>
    <string name="Dice2">Count up for Dice 2</string>
    <string name="Dice3">Count up for Dice 3</string>
    <string name="TotalDice">Total Dice Value</string>
    <string name="RDice2">Dice 2</string>
    <string name="RDice3">Dice 3</string>
    <string name="RDice1">Dice 1</string>
    <string name="reset_btn">Reset</string>
</resources>
